<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="blazehouse_title">BlazeHouse</string>
    <string name="add">Add</string>
    <string name="advanced">Advanced</string>
    <string name="cancel">Cancel</string>
    <string name="default_text">Default</string>
    <string name="dlg_ok">OK</string>
    <string name="attention">Attention</string>
    <string name="loading">Loading\u2026</string>
    <string name="reset">Reset</string>
    <string name="reset_colors">Reset colors</string>
    <string name="reset_android">Android</string>
    <string name="text_title">Text</string>
    <string name="icon_title">Icon</string>
    <string name="color_title">Color</string>
    <string name="colors_title">Colors</string>
    <string name="unit_milliseconds">milliseconds</string>
    <string name="unit_pixels">dp</string>
    <string name="status_bar_category">Statusbar</string>
    <string name="notifications_panel_category">QS panel</string>
    <string name="system_category">System</string>
    <string name="lockscreen_category">Lockscreen</string>
    <string name="themes_category">Themes</string>
    <string name="build_tweaks_summary_title">Get Amazed with BLAZE!!!</string>
    <string name="listview">ListView</string>
    <string name="udfps_category">UDFPS</string>
    <string name="blazehouse_dialog_title">Help us help you!</string>
    <string name="blazehouse_dialog_message">If you find a bug with any of these settings, report it in our Telegram Group. You MUST include the following when posting a bug report:\n\n1. A logcat or last_kmsg\n2. Kernel and mods used\n3. Useful information\n\nIf you fail to report something adequately, DO NOT expect things to be fixed.</string>
    <string name="blazehouse_dialog_toast">READ THE WHOLE THING!</string>
    <string name="search">Search</string>
    <string name="search_apps">Search apps</string>
    <string name="theme_customization_category">Theming</string>
    <string name="theme_customization_font_title">Headline / Body font</string>
    <string name="theme_customization_font_summary">Set system font style</string>
    <string name="theme_customization_icon_shape_title">Icon shape</string>
    <string name="theme_customization_icon_shape_summary">Set system icon shape style</string>
    <string name="theme_customization_icon_pack_title">Icon pack</string>
    <string name="theme_customization_icon_pack_summary">Set custom icon pack style</string>
    <string name="theme_customization_device_default">Device default</string>
    <string name="theme_customization_signal_icon_title">Signal icon style</string>
    <string name="theme_customization_signal_icon_summary">Set custom signal icon style</string>
    <string name="theme_customization_wifi_icon_title">WiFi icon style</string>
    <string name="theme_customization_wifi_icon_summary">Set custom wifi icon style</string>
    <string name="incall_vibration_category">In-call vibration options</string>
    <string name="incall_vibrate_connect_title">Vibrate on connect</string>
    <string name="incall_vibrate_call_wait_title">Vibrate on call waiting</string>
    <string name="incall_vibrate_disconnect_title">Vibrate on disconnect</string>
    <string name="lockscreen_gesture_title">Gestures</string>
    <string name="double_tap_to_sleep_lockscreen_title">Double tap to sleep</string>
    <string name="double_tap_to_sleep_lockscreen_summary">Double tap on the top third or bottom shortcut area of the lock screen to put the device to sleep</string>
    <string name="statusbar_gesture_title">Gestures</string>
    <string name="double_tap_to_sleep_statusbar_title">Double tap to sleep</string>
    <string name="double_tap_to_sleep_statusbar_summary">Double tap on statusbar to put the device to sleep</string>
    <string name="volume_category">Volume Rocker</string>
    <string name="volume_rocker_wake_title">Volume rocker wake</string>
    <string name="volume_rocker_wake_summary">Pressing the volume keys will wake your device</string>
    <string name="traffic_title">Traffic indicators</string>
    <string name="traffic_summary">Customize the traffic indicators</string>
    <string name="network_traffic_autohide_threshold_title">Auto-hide threshold</string>
    <string name="network_traffic_location_title">Location</string>
    <string name="network_traffic_disabled">Disabled</string>
    <string name="network_traffic_statusbar">Status bar</string>
    <string name="network_traffic_qs_header">QS header</string>
    <string name="network_traffic_refresh_interval_title">Refresh interval</string>
    <string name="network_traffic_mode_title">Display mode</string>
    <string name="network_traffic_dynamic">Dynamic</string>
    <string name="network_traffic_download">Download</string>
    <string name="network_traffic_upload">Upload</string>
    <string name="show_fourg_icon_title">Show 4G instead of LTE</string>
    <string name="show_fourg_icon_summary">Replace LTE indicator with 4G</string>
    <string name="volte_icon_title">VoLTE icon</string>
    <string name="volte_icon_summary">Display VoLTE icon when available</string>
    <string name="volte_icon_style_title">Select VoLTE Icon</string>
    <string name="volte_icon_asus">VoLTE Asus Icon</string>
    <string name="volte_icon_vo">Vo Only Icon</string>
    <string name="volte_icon_volte">VoLTE Icon</string>
    <string name="volte_icon_oos">VoLTE OOS Icon</string>
    <string name="volte_icon_hd">HD Icon</string>
    <string name="volte_icon_miui">MIUI 11 Icon</string>
    <string name="volte_icon_emui">EMUI Icon</string>
    <string name="volte_icon_hd2">HD CAF Icon</string>
    <string name="vowifi_icon_title">VoWiFi icon</string>
    <string name="vowifi_icon_summary">Display VoWiFi icon when available</string>
    <string name="volte_vowifi_override_title">VoWiFi override</string>
    <string name="volte_vowifi_override_summary">Hide VoLTE when VoWiFi is available</string>
    <string name="vowifi_icon_enabled">VoWiFi icon enabled</string>
    <string name="vowifi_icon_disabled">VoWiFi icon disabled</string>
    <string name="vowifi_icon_enabled_volte_disabled">VoWiFi instead of VoLTE icon</string>
    <string name="vowifi_icon_style_title">VoWiFi icon style</string>
    <string name="vowifi_icon_default">Default Icon</string>
    <string name="vowifi_icon_emui">EMUI Icon</string>
    <string name="vowifi_icon_asus">Asus Icon</string>
    <string name="vowifi_icon_oneplus">OOS Icon</string>
    <string name="vowifi_icon_moto">Motorola Icon</string>
    <string name="torch_power_button_gesture_title">Toggle torch when screen off</string>
    <string name="torch_power_button_gesture_none">Disabled</string>
    <string name="torch_power_button_gesture_dt">Double tap power button (slower single tap response), Disables double power tap for camera.</string>
    <string name="torch_power_button_gesture_dt_toast">Jump to camera gesture is now disabled</string>
    <string name="torch_power_button_gesture_lp">Long press power button</string>
    <string name="status_bar_battery_style_title">Battery style</string>
    <string name="status_bar_battery_style_port">Portrait</string>
    <string name="status_bar_battery_style_icon_rlandscape">Icon landscape (Right)</string>
    <string name="status_bar_battery_style_icon_landscape">Icon landscape (Left)</string>
    <string name="status_bar_battery_style_circle">Circle</string>
    <string name="status_bar_battery_style_dotted_circle">Dotted сircle</string>
    <string name="status_bar_battery_style_full_circle">Full Circle</string>
    <string name="status_bar_battery_style_text">Text</string>
    <string name="battery_style_category_title">Battery styles</string>
    <string name="status_bar_battery_percentage_title">Battery percentage</string>
    <string name="status_bar_battery_percentage_default">Hidden</string>
    <string name="status_bar_battery_percentage_text_next">Next to the icon</string>
    <string name="status_bar_battery_percentage_text_inside">Inside the icon</string>
    <string name="lockscreen_battery_info_title">Lockscreen charging info</string>
    <string name="lockscreen_battery_info_summary">Display negociated charger max current and voltage and battery temperature on lockscreen while charging</string>
    <string name="location_privacy_indicator_title">Location access indicator</string>
    <string name="location_privacy_indicator_summary_on">Show location in the privacy chip</string>
    <string name="location_privacy_indicator_summary_off">Show location in status bar icons</string>
    <string name="camera_privacy_indicator_title">Camera/Mic access indicator</string>
    <string name="camera_privacy_indicator_summary_on">Show camera/mic in the privacy chip</string>
    <string name="camera_privacy_indicator_summary_off">Show camera/mic in status bar icons</string>
    <string name="data_disabled_icon_title">Show data disabled icon</string>
    <string name="data_disabled_icon_summary">Display the exclamation sign next to signal bar when data is disabled</string>
    <string name="combined_status_bar_signal_icons">Combined signal icons</string>
    <string name="combined_status_bar_signal_icons_summary">Enable combined signal icons in status bar.\nRequires a SystemUI restart</string>
    <string name="qs_show_brightness_slider_title">Brightness slider</string>
    <string name="qs_show_brightness_slider_never">Never show</string>
    <string name="qs_show_brightness_slider_expanded">Show when expanded</string>
    <string name="qs_show_brightness_slider_always">Show always</string>
    <string name="qs_show_brightness_slider_not_expanded">Show when not expanded</string>
    <string name="qs_brightness_slider_position_title">Position</string>
    <string name="qs_brightness_slider_position_top">Top</string>
    <string name="qs_brightness_slider_position_bottom">Bottom</string>
    <string name="qs_show_auto_brightness_title">Auto brightness icon</string>
    <string name="qs_show_auto_brightness_summary">Show toggle for adaptive brightness near the slider</string>
    <string name="lockscreen_media_art_category_title">Media art</string>
    <string name="lockscreen_media_blur_title">Media art blur level</string>
    <string name="keygaurd_media_art_title">Show media art</string>
    <string name="keygaurd_media_art_summary">Display media art as lockscreen background</string>
    <string name="pulse_help_policy_notice_title">About Pulse</string>
    <string name="pulse_help_policy_notice_summary">Pulse is a brilliant audio graphic equalizer when music plays on the device</string>
    <string name="pulse_settings">Pulse</string>
    <string name="pulse_settings_summary">Audio graphic equalizer for navigation bar and lockscreen</string>
    <string name="show_navbar_pulse_title">Navbar Pulse</string>
    <string name="show_navbar_pulse_summary">Audio graphic equalizer on the navigation bar</string>
    <string name="show_lockscreen_pulse_title">Lockscreen Pulse</string>
    <string name="show_lockscreen_pulse_summary">Audio graphic equalizer on the lockscreen</string>
    <string name="show_ambient_pulse_title">Ambient Pulse</string>
    <string name="show_ambient_pulse_summary">Audio graphic equalizer on the ambient screen</string>
    <string name="pulse_render_mode_title">Render mode</string>
    <string name="monet_engine_custom_color_title">Use custom color</string>
    <string name="monet_engine_custom_color_summary">Use custom color for monet engine instead of wallpaper colors</string>
    <string name="monet_engine_color_override_title">Custom color</string>
    <string name="monet_engine_white_luminance_user_title">White luminance</string>
    <string name="monet_engine_accurate_shades_title">Use accurate shades</string>
    <string name="monet_engine_chroma_factor_title">Chroma factor</string>
    <string name="monet_engine_linear_lightness_title">Use linear lightness</string>
</resources>