<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:settings="http://schemas.android.com/apk/res/com.android.settings">

    <PreferenceCategory
        android:key="monet_category"
        android:title="Monet">


    <com.blaze.house.preferences.SecureSettingSwitchPreference
        android:key="monet_engine_custom_color"
        android:title="@string/monet_engine_custom_color_title"
        android:summary="@string/monet_engine_custom_color_summary"
        android:defaultValue="false" />

    <com.blaze.house.colorpicker.ColorPickerPreference
        android:key="monet_engine_color_override"
        android:title="@string/monet_engine_color_override_title"
        android:dependency="monet_engine_custom_color"
        android:defaultValue="0xffffff" />

    <com.blaze.house.preferences.SecureSettingSeekBarPreference
        android:key="monet_engine_white_luminance_user"
        android:title="@string/monet_engine_white_luminance_user_title"
        android:defaultValue="425"
        android:max="1000"
        settings:min="200"
        settings:interval="100"/>

    <com.blaze.house.preferences.SecureSettingSwitchPreference
        android:key="monet_engine_accurate_shades"
        android:title="@string/monet_engine_accurate_shades_title"
        android:defaultValue="true" />

    <com.blaze.house.preferences.SecureSettingSeekBarPreference
        android:key="monet_engine_chroma_factor"
        android:title="@string/monet_engine_chroma_factor_title"
        android:defaultValue="100"
        android:max="400"
        settings:min="50"
        settings:interval="50"/>

    <com.blaze.house.preferences.SecureSettingSwitchPreference
        android:key="monet_engine_linear_lightness"
        android:title="@string/monet_engine_linear_lightness_title"
        android:defaultValue="false" />

    </PreferenceCategory>
 
    <!-- Theming -->
    	<Preference
            android:key="android.theme.customization.fonts"
            android:title="@string/theme_customization_font_title"
            android:summary="@string/theme_customization_font_summary"
            android:fragment="com.blaze.house.fragments.FontsPicker"/>

        <Preference
            android:key="android.theme.customization.icon_pack"
            android:title="@string/theme_customization_icon_pack_title"
            android:summary="@string/theme_customization_icon_pack_summary"
            android:fragment="com.blaze.house.fragments.StatusbarIcons"/>
            
       <Preference
            android:key="android.theme.customization.signal_icon"
            android:title="@string/theme_customization_signal_icon_title"
            android:summary="@string/theme_customization_signal_icon_summary"
            android:fragment="com.blaze.house.fragments.SignalIcons"/>

      <Preference
            android:key="android.theme.customization.wifi_icon"
            android:title="@string/theme_customization_wifi_icon_title"
            android:summary="@string/theme_customization_wifi_icon_summary"
            android:fragment="com.blaze.house.fragments.WifiIcons"/>      

        <Preference
            android:key="android.theme.customization.adaptive_icon_shape"
            android:title="@string/theme_customization_icon_shape_title"
            android:summary="@string/theme_customization_icon_shape_summary"
            android:fragment="com.blaze.house.fragments.IconShapes"/>     

</PreferenceScreen>
